// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountInputDemo Component JSON 1`] = `
.c2 {
  display: inline-block;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  right: 1rem;
}

.c5 {
  box-sizing: border-box;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  font-size: 1.2rem;
  cursor: text;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c5::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c5::-moz-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c5:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c5::placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c3 {
  position: relative;
  display: inline-block;
  outline: none;
  min-width: 3rem;
  width: 100%;
}

.c4 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  line-height: 1rem;
  font-size: 1.4em;
  color: #999999;
  left: 1rem;
}

.c1 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c0 {
  float: left;
  margin-left: 50px;
}

<div>
  <div
    className="c0"
  >
    <p>
      formatter AmountInput
    </p>
    <span
      className="c1"
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        style={Object {}}
      >
        <span
          className="c3"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c4"
            style={Object {}}
          >
            <span
              className=""
              style={Object {}}
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c5"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="请填写金额"
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {},
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                    },
                    "themeState": Object {
                      "disabled": false,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="default"
            style={
              Object {
                "color": "#333333",
                "paddingBottom": "0rem",
                "paddingLeft": "3rem",
                "paddingRight": "3.5rem",
                "paddingTop": "0rem",
              }
            }
            value=""
          />
        </span>
      </div>
    </span>
    <p>
      default AmountInput
    </p>
    <span
      className="c1"
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        style={Object {}}
      >
        <span
          className="c3"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c4"
            style={Object {}}
          >
            <span
              className=""
              style={Object {}}
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c5"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="请填写金额"
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {},
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                    },
                    "themeState": Object {
                      "disabled": false,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="default"
            style={
              Object {
                "color": "#333333",
                "paddingBottom": "0rem",
                "paddingLeft": "3rem",
                "paddingRight": "3.5rem",
                "paddingTop": "0rem",
              }
            }
            value=""
          />
        </span>
      </div>
    </span>
    <p>
      禁用状态 
    </p>
    <span
      className="c1"
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        style={Object {}}
      >
        <span
          className="c3"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c4"
            style={Object {}}
          >
            <span
              className=""
              style={Object {}}
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c5"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder=""
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {},
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                    },
                    "themeState": Object {
                      "disabled": true,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="default"
            style={
              Object {
                "backgroundColor": "#f2f2f2",
                "borderBottomColor": "#cccccc",
                "borderBottomStyle": "solid",
                "borderBottomWidth": "0.1rem",
                "borderLeftColor": "#cccccc",
                "borderLeftStyle": "solid",
                "borderLeftWidth": "0.1rem",
                "borderRightColor": "#cccccc",
                "borderRightStyle": "solid",
                "borderRightWidth": "0.1rem",
                "borderTopColor": "#cccccc",
                "borderTopStyle": "solid",
                "borderTopWidth": "0.1rem",
                "color": "#333333",
                "cursor": "not-allowed",
                "paddingBottom": "0rem",
                "paddingLeft": "3rem",
                "paddingRight": "3.5rem",
                "paddingTop": "0rem",
              }
            }
            value=""
          />
        </span>
      </div>
    </span>
  </div>
  <div
    className="c0"
  >
    <p>
      small size
    </p>
    <span
      className="c1"
      style={
        Object {
          "height": "4rem",
          "width": "40rem",
        }
      }
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        style={Object {}}
      >
        <span
          className="c3"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "4rem",
              "width": "40rem",
            }
          }
        >
          <span
            className="c4"
            style={Object {}}
          >
            <span
              className=""
              style={
                Object {
                  "color": "blue",
                  "fontSize": "1.4rem",
                }
              }
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c5"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="请填写金额"
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {},
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                      "normal": Object {
                        "color": "blue",
                        "fontSize": 14,
                      },
                    },
                    "themeState": Object {
                      "disabled": false,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="small"
            style={
              Object {
                "color": "#333333",
                "paddingBottom": "0rem",
                "paddingLeft": "3rem",
                "paddingRight": "3.5rem",
                "paddingTop": "0rem",
              }
            }
            value=""
          />
        </span>
      </div>
    </span>
    <p>
      default size
    </p>
    <span
      className="c1"
      style={
        Object {
          "height": "4rem",
          "width": "40rem",
        }
      }
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        style={Object {}}
      >
        <span
          className="c3"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "4rem",
              "width": "40rem",
            }
          }
        >
          <span
            className="c4"
            style={Object {}}
          >
            <span
              className=""
              style={
                Object {
                  "color": "blue",
                  "fontSize": "1.4rem",
                }
              }
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c5"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="请填写金额"
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {},
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                      "normal": Object {
                        "color": "blue",
                        "fontSize": 14,
                      },
                    },
                    "themeState": Object {
                      "disabled": false,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="default"
            style={
              Object {
                "color": "#333333",
                "paddingBottom": "0rem",
                "paddingLeft": "3rem",
                "paddingRight": "3.5rem",
                "paddingTop": "0rem",
              }
            }
            value=""
          />
        </span>
      </div>
    </span>
    <p>
      large size
    </p>
    <span
      className="c1"
      style={
        Object {
          "height": "4rem",
          "width": "40rem",
        }
      }
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        style={Object {}}
      >
        <span
          className="c3"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "4rem",
              "width": "40rem",
            }
          }
        >
          <span
            className="c4"
            style={Object {}}
          >
            <span
              className=""
              style={
                Object {
                  "color": "blue",
                  "fontSize": "1.4rem",
                }
              }
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c5"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder=""
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {},
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                      "normal": Object {
                        "color": "blue",
                        "fontSize": 14,
                      },
                    },
                    "themeState": Object {
                      "disabled": true,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="large"
            style={
              Object {
                "backgroundColor": "#f2f2f2",
                "borderBottomColor": "#cccccc",
                "borderBottomStyle": "solid",
                "borderBottomWidth": "0.1rem",
                "borderLeftColor": "#cccccc",
                "borderLeftStyle": "solid",
                "borderLeftWidth": "0.1rem",
                "borderRightColor": "#cccccc",
                "borderRightStyle": "solid",
                "borderRightWidth": "0.1rem",
                "borderTopColor": "#cccccc",
                "borderTopStyle": "solid",
                "borderTopWidth": "0.1rem",
                "color": "#333333",
                "cursor": "not-allowed",
                "paddingBottom": "0rem",
                "paddingLeft": "3rem",
                "paddingRight": "3.5rem",
                "paddingTop": "0rem",
              }
            }
            value=""
          />
        </span>
      </div>
    </span>
  </div>
  <div
    className="c0"
  >
    <p>
      受限Input
    </p>
    <span
      className="c1"
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        style={Object {}}
      >
        <span
          className="c3"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c4"
            style={Object {}}
          >
            <span
              className=""
              style={Object {}}
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c5"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {},
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                    },
                    "themeState": Object {
                      "disabled": false,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="default"
            style={
              Object {
                "color": "#333333",
                "paddingBottom": "0rem",
                "paddingLeft": "3rem",
                "paddingRight": "3.5rem",
                "paddingTop": "0rem",
              }
            }
            value=""
          />
        </span>
      </div>
    </span>
    <p>
      有默认值的 受限Input
    </p>
    <span
      className="c1"
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        style={Object {}}
      >
        <span
          className="c3"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c4"
            style={Object {}}
          >
            <span
              className=""
              style={Object {}}
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c5"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {},
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                    },
                    "themeState": Object {
                      "disabled": false,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="default"
            style={
              Object {
                "color": "#333333",
                "paddingBottom": "0rem",
                "paddingLeft": "3rem",
                "paddingRight": "3.5rem",
                "paddingTop": "0rem",
              }
            }
            value="123,456"
          />
          <i
            className="lugia-icon-reminder_close   c6"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#999999",
              }
            }
          />
        </span>
      </div>
    </span>
  </div>
  <div
    className="c0"
  >
    <p>
      amountPrefix: '¥' transform: false 
    </p>
    <span
      className="c1"
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        style={Object {}}
      >
        <span
          className="c3"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c4"
            style={Object {}}
          >
            <span
              className=""
              style={Object {}}
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c5"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {},
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                    },
                    "themeState": Object {
                      "disabled": false,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="default"
            style={
              Object {
                "color": "#333333",
                "paddingBottom": "0rem",
                "paddingLeft": "3rem",
                "paddingRight": "3.5rem",
                "paddingTop": "0rem",
              }
            }
            value=""
          />
        </span>
      </div>
    </span>
    <p>
      amountPrefix: '$' transform: false 
    </p>
    <span
      className="c1"
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        style={Object {}}
      >
        <span
          className="c3"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c4"
            style={Object {}}
          >
            <span
              className=""
              style={Object {}}
            >
              $
            </span>
          </span>
          <input
            autoFocus={false}
            className="c5"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {},
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                    },
                    "themeState": Object {
                      "disabled": false,
                    },
                  }
                }
              >
                $
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="default"
            style={
              Object {
                "color": "#333333",
                "paddingBottom": "0rem",
                "paddingLeft": "3rem",
                "paddingRight": "3.5rem",
                "paddingTop": "0rem",
              }
            }
            value=""
          />
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`AmountInputDemo props: placeholder  1`] = `
.c1 {
  display: inline-block;
}

.c4 {
  box-sizing: border-box;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  font-size: 1.2rem;
  cursor: text;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c4::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c4::-moz-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c4:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c4::placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c2 {
  position: relative;
  display: inline-block;
  outline: none;
  min-width: 3rem;
  width: 100%;
}

.c3 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  line-height: 1rem;
  font-size: 1.4em;
  color: #999999;
  left: 1rem;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 100%;
}

<span
  className="c0"
  style={Object {}}
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    style={Object {}}
  >
    <span
      className="c2"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "height": "3.2rem",
        }
      }
    >
      <span
        className="c3"
        style={Object {}}
      >
        <span
          className=""
          style={Object {}}
        >
          ¥
        </span>
      </span>
      <input
        autoFocus={false}
        className="c4"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        placeholder="请填写内容"
        prefix={
          <ForwardRef(ResultForward)
            themeProps={
              Object {
                "onLugia": [Function],
                "propsConfig": Object {},
                "themeConfig": Object {
                  "__partName": "AmountInputPrefix",
                },
                "themeState": Object {
                  "disabled": false,
                },
              }
            }
          >
            ¥
          </ForwardRef(ResultForward)>
        }
        readOnly={false}
        size="default"
        style={
          Object {
            "color": "#333333",
            "paddingBottom": "0rem",
            "paddingLeft": "3rem",
            "paddingRight": "3.5rem",
            "paddingTop": "0rem",
          }
        }
        value=""
      />
    </span>
  </div>
</span>
`;

exports[`AmountInputDemo props: placeholder  2`] = `
.c1 {
  display: inline-block;
}

.c4 {
  box-sizing: border-box;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  font-size: 1.2rem;
  cursor: text;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c4::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c4::-moz-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c4:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c4::placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c2 {
  position: relative;
  display: inline-block;
  outline: none;
  min-width: 3rem;
  width: 100%;
}

.c3 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  line-height: 1rem;
  font-size: 1.4em;
  color: #999999;
  left: 1rem;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 100%;
}

<span
  className="c0"
  style={Object {}}
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    style={Object {}}
  >
    <span
      className="c2"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "height": "3.2rem",
        }
      }
    >
      <span
        className="c3"
        style={Object {}}
      >
        <span
          className=""
          style={Object {}}
        >
          ¥
        </span>
      </span>
      <input
        autoFocus={false}
        className="c4"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        placeholder=""
        prefix={
          <ForwardRef(ResultForward)
            themeProps={
              Object {
                "onLugia": [Function],
                "propsConfig": Object {},
                "themeConfig": Object {
                  "__partName": "AmountInputPrefix",
                },
                "themeState": Object {
                  "disabled": false,
                },
              }
            }
          >
            ¥
          </ForwardRef(ResultForward)>
        }
        readOnly={false}
        size="default"
        style={
          Object {
            "color": "#333333",
            "paddingBottom": "0rem",
            "paddingLeft": "3rem",
            "paddingRight": "3.5rem",
            "paddingTop": "0rem",
          }
        }
        value=""
      />
    </span>
  </div>
</span>
`;
